sensor layer works with docker compose

--- a/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.state.yaml
+++ b/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.state.yaml
@@ -1,10 +1,11 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: rabbitmq
   labels:
     app: rabbitmq
 spec:
+  serviceName: rabbitmq
   replicas: 1
   selector:
     matchLabels:
@@ -33,9 +34,13 @@ spec:
               name: rabbitmq-secret
               key: RABBITMQ_DEFAULT_PASS
         volumeMounts:
-        - name: rabbitmq-storage
+        - name: rabbitmq-data
           mountPath: /var/lib/rabbitmq
-      volumes:
-      - name: rabbitmq-storage
-        persistentVolumeClaim:
-          claimName: rabbitmq-pvc
+  volumeClaimTemplates:
+  - metadata:
+      name: rabbitmq-data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 1Gi
