--- a/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.secret.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: detectiondb-secret
 type: Opaque
 stringData:
-  MONGO_INITDB_ROOT_USERNAME: "mongo"
-  MONGO_INITDB_ROOT_PASSWORD: "mongo123"
+  MONGO_ROOT_USERNAME: "mongo"
+  MONGO_ROOT_PASSWORD: "mongo123"
