--- a/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.state.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.state.yaml
@@ -19,16 +19,16 @@ spec:
         ports:
         - containerPort: 27017
         env:
-        - name: MONGO_INITDB_ROOT_USERNAME
+        - name: MONGO_ROOT_USERNAME
           valueFrom:
             secretKeyRef:
               name: detectiondb-secret
-              key: MONGO_INITDB_ROOT_USERNAME
-        - name: MONGO_INITDB_ROOT_PASSWORD
+              key: MONGO_ROOT_USERNAME
+        - name: MONGO_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: detectiondb-secret
-              key: MONGO_INITDB_ROOT_PASSWORD
+              key: MONGO_ROOT_PASSWORD
         volumeMounts:
         - name: mongo-data
           mountPath: /data/db
