--- a/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detectioncachedb.service.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detectioncachedb.service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: detectioncachedb
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 6379
       targetPort: 6379
-      nodePort: 30379
   selector:
     app: detectioncachedb
