--- a/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.service.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: detectiondb
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 27017
       targetPort: 27017
-      nodePort: 30217
   selector:
     app: detectiondb
