--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.kentriki_pyli.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.kentriki_pyli.yaml
@@ -30,13 +30,13 @@ spec:
         # Intersection identity
         # ===============================
         ## SECRET
-        - name: INTERSECTION_ID
+        - name: INTERSECTION__ID
           valueFrom:
             secretKeyRef:
               name: detectionapi-secret
               key: INTERSECTION_Kentriki_Pyli_ID
 
-        - name: INTERSECTION_NAME
+        - name: INTERSECTION__NAME
           value: "Kentriki Pyli"
 
         # ===============================
@@ -168,6 +168,14 @@ spec:
           periodSeconds: 20
           timeoutSeconds: 3
           failureThreshold: 3
+
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          # give enough time (up to ~5 minutes) for RabbitMQ/Mongo to start
+          failureThreshold: 30
+          periodSeconds: 10
 
 # Service
 ---
