--- a/src/back-end/SensorLayer/Services/SensorService/K8s/k8s.sensorapi.anatoliki_pyli.yaml
+++ b/src/back-end/SensorLayer/Services/SensorService/K8s/k8s.sensorapi.anatoliki_pyli.yaml
@@ -29,12 +29,12 @@ spec:
         # ===============================
         # Intersection identity
         # ===============================
-        - name: INTERSECTION_ID
+        - name: INTERSECTION__ID
           valueFrom:
             secretKeyRef:
               name: sensorapi-secret
               key: INTERSECTION_Anatoliki_Pyli_ID
-        - name: INTERSECTION_NAME
+        - name: INTERSECTION__NAME
           value: "Anatoliki Pyli"
 
         # ===============================
@@ -59,12 +59,12 @@ spec:
         - name: MONGO_ROOT_USERNAME
           valueFrom:
             secretKeyRef:
-              name: detectionapi-secret
+              name: sensorapi-secret
               key: MONGO_ROOT_USERNAME
         - name: MONGO_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: detectionapi-secret
+              name: sensorapi-secret
               key: MONGO_ROOT_PASSWORD
 
         # ===============================
@@ -77,7 +77,7 @@ spec:
         - name: Redis__Password
           valueFrom:
             secretKeyRef:
-              name: detectionapi-secret
+              name: sensorapi-secret
               key: REDIS_PASSWORD
         - name: Redis__Database
           value: "0"
@@ -114,7 +114,7 @@ spec:
         - name: Jwt__Key
           valueFrom:
             secretKeyRef:
-              name: detectionapi-secret
+              name: sensorapi-secret
               key: JWT_KEY
 
         # ===============================
@@ -127,12 +127,12 @@ spec:
         - name: RabbitMQ__Username
           valueFrom:
             secretKeyRef:
-              name: detectionapi-secret
+              name: sensorapi-secret
               key: RABBITMQ_USERNAME
         - name: RabbitMQ__Password
           valueFrom:
             secretKeyRef:
-              name: detectionapi-secret
+              name: sensorapi-secret
               key: RABBITMQ_PASSWORD
         - name: RabbitMQ__Exchanges__Sensor
           value: "SENSOR.EXCHANGE"
@@ -166,6 +166,14 @@ spec:
           periodSeconds: 20
           timeoutSeconds: 3
           failureThreshold: 3
+
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          # give enough time (up to ~5 minutes) for RabbitMQ/Mongo to start
+          failureThreshold: 30
+          periodSeconds: 10
 
 # Service
 ---
