--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/Deployment/k8s.detectionapi.agiou_spyridonos.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/Deployment/k8s.detectionapi.agiou_spyridonos.yaml
@@ -182,10 +182,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: detectionapi-agiou-spyridonos
+  namespace: uniwa-stls
 spec:
   type: ClusterIP
-  ports:
-  - port: 8080
-    targetPort: 8080
   selector:
     app: detectionapi-agiou-spyridonos
+  ports:
+    - port: 8080
+      targetPort: 8080
