--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.secret.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.secret.yaml
@@ -2,18 +2,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: detectionapi-secret
+  namespace: uniwa-stls
 type: Opaque
 stringData:
-  JWT_KEY: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
-  RABBITMQ_USERNAME: "rabbitmq"
-  RABBITMQ_PASSWORD: "rabbitmq123"
   MONGO_ROOT_USERNAME: "mongo"
   MONGO_ROOT_PASSWORD: "mongo123"
-  REDIS_PASSWORD: "" 
-
-  # Intersection identities
-  INTERSECTION_Agiou_Spyridonos_ID: "1"
-  INTERSECTION_Anatoliki_Pyli_ID: "2"
-  INTERSECTION_Dytiki_Pyli_ID: "3"
-  INTERSECTION_Ekklisia_ID: "4"
-  INTERSECTION_Kentriki_Pyli_ID: "5"
+  RABBITMQ_USERNAME: "rabbitmq"
+  RABBITMQ_PASSWORD: "rabbitmq123"
+  JWT_KEY: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
