--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.secret.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.secret.yaml
@@ -9,4 +9,5 @@ stringData:
   MONGO_ROOT_PASSWORD: "mongo123"
   RABBITMQ_USERNAME: "rabbitmq"
   RABBITMQ_PASSWORD: "rabbitmq123"
+  REDIS_PASSWORD: ""
   JWT_KEY: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
