--- a/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.service.yaml
+++ b/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.service.yaml
@@ -2,18 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq
+  namespace: uniwa-stls
   labels:
     app: rabbitmq
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-  - name: amqp
-    port: 5672
-    targetPort: 5672
-    nodePort: 30672
-  - name: management
-    port: 15672
-    targetPort: 15672
-    nodePort: 31672
+    - name: amqp
+      port: 5672
+      targetPort: 5672
+    - name: management
+      port: 15672
+      targetPort: 15672
   selector:
     app: rabbitmq
