--- a/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/TrafficAnalyticsData/TrafficAnalyticsData.csproj
+++ b/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/TrafficAnalyticsData/TrafficAnalyticsData.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   
