--- a/src/back-end/TrafficLayer/Databases/TrafficLightDB/TrafficLightData/TrafficLightData.csproj
+++ b/src/back-end/TrafficLayer/Databases/TrafficLightDB/TrafficLightData/TrafficLightData.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
