--- a/src/back-end/LogLayer/Services/LogService/Compose/Deployment/compose.log-api.yaml
+++ b/src/back-end/LogLayer/Services/LogService/Compose/Deployment/compose.log-api.yaml
@@ -1,7 +1,7 @@
 services:
   log_api:
-    image: ath21/stls:log_api
-    container_name: logapi_container
+    image: ath21/stls-services:log_api
+    container_name: log_api_container
     networks:
       - log_network
       - rabbitmq_network
