--- a/src/back-end/MessageLayer/RabbitMQ/Compose/Deployment/compose.rabbitmq.override.yaml
+++ b/src/back-end/MessageLayer/RabbitMQ/Compose/Deployment/compose.rabbitmq.override.yaml
@@ -3,11 +3,10 @@ services:
     ports:
       - '5672:5672'
       - '15672:15672'
-    environment:
-      - RABBITMQ_DEFAULT_USER=rabbitmq
-      - RABBITMQ_DEFAULT_PASS=rabbitmq123
+    env_file:
+      - ../compose.rabbitmq.secret.env 
     volumes:
-      - amqptopics_data:/var/lib/rabbitmq
+      - rabbitmq_data:/var/lib/rabbitmq
     restart: always
     healthcheck:
       test: ["CMD", "rabbitmqctl", "status"]
@@ -16,6 +15,6 @@ services:
       retries: 5
 
 volumes:
-  amqptopics_data:
-    name: amqptopics_data
+  rabbitmq_data:
+    name: rabbitmq_data
     driver: local
