--- a/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/TrafficLightCoordinatorStore/TrafficLightCoordinatorStore.csproj
+++ b/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/TrafficLightCoordinatorStore/TrafficLightCoordinatorStore.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="../../../Databases/TrafficLightDB/TrafficLightData/TrafficLightData.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Publishers/Logs/" />
+  </ItemGroup>
+
 </Project>
