--- a/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.dytiki-pyli.yaml
+++ b/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.dytiki-pyli.yaml
@@ -3,7 +3,7 @@ services:
     image: ath21/stls-services:intersection-controller
     container_name: intersection-controller-dytiki-pyli-container
     ports:
-      - '5190:8080'
+      - '5192:8080'
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://+:8080
@@ -89,8 +89,14 @@ services:
 
 networks:
   traffic-light-cache-network:
+    name: traffic-light-cache-network
+    driver: bridge
     external: true
   detection-cache-network:
+    name: detection-cache-network
+    driver: bridge
     external: true
   rabbitmq-network:
+    name: rabbitmq-network
+    driver: bridge
     external: true
