--- a/src/back-end/UserLayer/Databases/NotificationDB/Mongo/Compose/compose.notification-db.override.yaml
+++ b/src/back-end/UserLayer/Databases/NotificationDB/Mongo/Compose/compose.notification-db.override.yaml
@@ -1,15 +1,15 @@
 services:
-  notification_db:
+  notification-db:
     ports:
       - '27018:27017'
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: mongo123
     volumes:
-      - notificationdb_data:/data/db
+      - notification-db-data:/data/db
     restart: always
 
 volumes:
-  notificationdb_data:
-    name: notificationdb_data
+  notification-db-data:
+    name: notification-db-data
     driver: local
