--- a/src/back-end/UserLayer/Services/UserService/Compose/compose.user-api.override.yaml
+++ b/src/back-end/UserLayer/Services/UserService/Compose/compose.user-api.override.yaml
@@ -3,69 +3,41 @@ services:
     ports:
       - '5055:8080'
     environment:
-      # ===============================
-      # ASP.NET Core
-      # ===============================
       ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_URLS: http://+:8080
 
-      # ===============================
-      # Databases
-      # ===============================
-
-      ## UserDB (MSSQL)
+      # UserDB (MSSQL)
       ConnectionStrings__MSSQLConnection: Server=user-db,1433;Database=UserDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
 
-      # ===============================
-      # CORS Policy
-      # ===============================
-      Cors__AllowedOrigins: http://localhost:5173
-      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE
+      # CORS
+      Cors__AllowedOrigins: http://localhost:5173,https://stls.local
+      Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE,OPTIONS
       Cors__AllowedHeaders: Content-Type,Authorization
 
-      # ===============================
-      # JWT Authentication
-      # ===============================
+      # JWT
       Jwt__Issuer: http://stls_backend:8080
       Jwt__Audience: http://stls_backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
 
-      # ===============================
-      # RabbitMQ Connection
-      # ===============================
+      # RabbitMQ
+      ## Configuration
       RabbitMQ__Host: rabbitmq
+      RabbitMQ__VirtualHost: /
       RabbitMQ__Port: 5672
       RabbitMQ__Username: rabbitmq
       RabbitMQ__Password: rabbitmq123
 
-      # ===============================
-      # RabbitMQ Exchanges
-      # ===============================
-
-      ## USER.EXCHANGE
+      ## Exchanges & Routing Keys
+      ### User
       RabbitMQ__Exchanges__User: USER.EXCHANGE
-      # --- Publish
-      RabbitMQ__RoutingKeys__User__NotificationRequest: user.notification.request
-      # --- Consume
-      RabbitMQ__Queues__User__Notifications: notifications.user.queue
-      RabbitMQ__RoutingKeys__User__NotificationAlert: user.notification.alert
-      RabbitMQ__RoutingKeys__User__NotificationPublic: notification.event.public_notice
 
-      ## TRAFFIC.EXCHANGE
-      RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
-      # --- Publish
-      RabbitMQ__RoutingKeys__Traffic__LightControl: traffic.light.control.{intersection_id}.{light_id}
-      RabbitMQ__RoutingKeys__Traffic__LightUpdate: traffic.light.update.{intersection_id}
-      # --- Consume
-      RabbitMQ__Queues__Traffic__Analytics: traffic.analytics.user.queue
-      RabbitMQ__RoutingKeys__Traffic__Congestion: traffic.analytics.congestion.{intersection_id}
-      RabbitMQ__RoutingKeys__Traffic__Summary: traffic.analytics.summary.{intersection_id}
-      RabbitMQ__RoutingKeys__Traffic__Incident: traffic.analytics.incident.{intersection_id}
-
-      ## LOG.EXCHANGE
+      RabbitMQ__Queues__User__Notification: notification-2-user.queue
+      RabbitMQ__RoutingKeys__UserNotifications: user.notifications.{type}
+      
+      ### Log
       RabbitMQ__Exchanges__Log: LOG.EXCHANGE
-      # --- Publish
-      RabbitMQ__RoutingKeys__Log__Audit: log.user.user_service.audit
-      RabbitMQ__RoutingKeys__Log__Error: log.user.user_service.error
+      
+      RabbitMQ__RoutingKeys__Log__User: log.user.user-service.{type}
     
     depends_on:
       user-db:
