user layer done!!

--- a/src/back-end/UserLayer/Services/NotificationService/Compose/compose.notification-api.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/Compose/compose.notification-api.yaml
@@ -1,6 +1,6 @@
 services:
   notification-api:
-    image: ath21/stls-service_started:notification-api
+    image: ath21/stls-services:notification-api
     container_name: notification-api-container
     networks:
       - notification-network
