--- a/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.kentriki-pyli.yaml
+++ b/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.kentriki-pyli.yaml
@@ -1,5 +1,5 @@
 services:
-  intersection-controller:
+  intersection-controller-kentriki-pyli:
     image: ath21/stls-services:intersection-controller
     container_name: intersection-controller-kentriki-pyli-container
     ports:
