--- a/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.anatoliki-pyli.yaml
+++ b/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.anatoliki-pyli.yaml
@@ -1,5 +1,5 @@
 services:
-  intersection-controller:
+  intersection-controller-anatoliki-pyli:
     image: ath21/stls-services:intersection-controller
     container_name: intersection-controller-anatoliki-pyli-container
     ports:
